# Concordo

./: CMakeLists.txt  README.md  servidores.txt  teste.txt  teste2.txt  usuarios.txt
include/: canal.h  canalTexto.h  canalVoz.h  mensagem.h  servidor.h  sistema.h  usuario..h  usuario.h
src/: canal.cpp  canalTexto.cpp  canalVoz.cpp  main.cpp  mensagem.cpp  servidor.cpp  sistema.cpp  usuario.cpp
